zetasql/parser/testdata/export_model.test
# Valid statement with connection and options.
export model model.name with connection connection_id options(uri="destination");
--
ExportModelStatement [0-80] [export model...destination")]
  PathExpression [13-23] [model.name]
    Identifier(model) [13-18] [model]
    Identifier(name) [19-23] [name]
  WithConnectionClause [24-53] [with connection connection_id]
    ConnectionClause [29-53] [connection connection_id]
      PathExpression [40-53] [connection_id]
        Identifier(connection_id) [40-53] [connection_id]
  OptionsList [61-80] [(uri="destination")]
    OptionsEntry [62-79] [uri="destination"]
      Identifier(uri) [62-65] [uri]
      StringLiteral("destination") [66-79] ["destination"]
--
EXPORT MODEL model.name WITH CONNECTION connection_id OPTIONS(uri = "destination")
==

# Valid statement only with options.
export model model.name options(uri = "destination");
--
ExportModelStatement [0-52] [export model...destination")]
  PathExpression [13-23] [model.name]
    Identifier(model) [13-18] [model]
    Identifier(name) [19-23] [name]
  OptionsList [31-52] [(uri = "destination")]
    OptionsEntry [32-51] [uri = "destination"]
      Identifier(uri) [32-35] [uri]
      StringLiteral("destination") [38-51] ["destination"]
--
EXPORT MODEL model.name OPTIONS(uri = "destination")
==

# Valid statement only with connection.
export model model.name with connection connection_id;
--
ExportModelStatement [0-53] [export model...connection_id]
  PathExpression [13-23] [model.name]
    Identifier(model) [13-18] [model]
    Identifier(name) [19-23] [name]
  WithConnectionClause [24-53] [with connection connection_id]
    ConnectionClause [29-53] [connection connection_id]
      PathExpression [40-53] [connection_id]
        Identifier(connection_id) [40-53] [connection_id]
--
EXPORT MODEL model.name WITH CONNECTION connection_id
==

# Invalid statement without model name.
export model with connection connection_id options();
--
ERROR: Syntax error: Unexpected keyword WITH [at 1:14]
export model with connection connection_id options();
             ^
==

# Invalid statement with select statement.
export model model.name options() as select 1 as a;
--
ERROR: Syntax error: Expected end of input but got keyword AS [at 1:35]
export model model.name options() as select 1 as a;
                                  ^
==

# WITH must be combined with connection only.
export model model.name with options();
--
ERROR: Syntax error: Expected keyword CONNECTION but got keyword OPTIONS [at 1:30]
export model model.name with options();
                             ^
